Don't animate window maximize / resizes when restoring session
Categories
(Firefox :: Session Restore, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox72 | --- | fixed |
People
(Reporter: mconley, Assigned: emmamalysz)
References
(Blocks 1 open bug)
Details
(Whiteboard: [fxperf:p2])
Attachments
(2 files)
STR:
- Configure Firefox to restore sessions on start-up
- Open a few windows, and maximize one of them (when I reproduced this bug, it was the last window I opened that I maximized)
- Quit the browser
- Start the browser
ER:
The windows from the last session should be opened, but none should animate.
AR:
The maximized window is opened, and then animates itself into the maximized state.
I only tried reproducing this on macOS, but this might also affect Windows and Linux.
Setting the [fxperf] flag because this is the sort of thing that can impact perceived start-up time.
Comment 1•7 years ago
|
||
(In reply to Mike Conley (:mconley) (:⚙️) from comment #0)
Setting the [fxperf] flag because this is the sort of thing that can impact perceived start-up time.
It does indeed, certainly on OSX. We do set dwu.suppressAnimation(true);, which I think you added, but it doesn't seem to do anything in Cocoa widget code.
Not sure if related, but on my Windows 10 usually restoring a session opens Nightly as maximized, goes to unmaximized and then maximizes again.
I'm almost always using Nightly in a maximized state.
Updated•7 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 3•6 years ago
|
||
Updated•6 years ago
|
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
I can't seem to be able to reproduce this issue.
Can you please post a gif with the issue or verify to see if the issue is reproducing on latest Nightly or beta?
| Assignee | ||
Comment 7•6 years ago
|
||
Description
•