Bug 1519517, ensure that restoring a session doesn't animate and resize the window r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D50839

--HG--
extra : moz-landing-system : lando